@@ -91,7 +91,12 @@ class CXCache extends CCache
 	 */
 	public function flush()
 	{
-		return xcache_clear_cache();
+		for($i=0, $max=xcache_count(XC_TYPE_VAR); $i<$max; $i++)
+		{
+			if(xcache_clear_cache(XC_TYPE_VAR, $i)===false)
+				return false;
+		}
+		return true;
 	}
 }
 
